messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-blue
  labels:
    app: django-messaging-app
    version: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-messaging-app
      version: blue
  template:
    metadata:
      labels:
        app: django-messaging-app
        version: blue
    spec:
      containers:
        - name: django-messaging-app
          image: your-dockerhub-user/django-messaging-app:1.0
          ports:
            - containerPort: 8000
