messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service
  labels:
    app: django-messaging-app
spec:
  type: ClusterIP
  selector:
    app: django-messaging-app
    # Initially route to blue
    version: blue
  ports:
    - port: 8000
      targetPort: 8000
